# py2048

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  pyproject.toml  pytest.ini
.github/: commit_scopes.md
.github/workflows/: tests.yml
src/py2048/: __init__.py  bootstrap.py  config.py  run.py  views.py
src/py2048/adapters/: notifications.py  repositories.py  schemas.py
src/py2048/adapters/repositories/: __init__.py  game_repositories.py  records_repositories.py
src/py2048/application/: __init__.py  menu.py
src/py2048/core/: __init__.py  commands.py  events.py  exceptions.py  game_board.py  models.py  validators.py
src/py2048/core/models/: __init__.py  game_board.py  game_state.py  move.py  py2048_game.py  record.py  scoring.py
src/py2048/front_end/: __init__.py  cli.py
src/py2048/interfaces/: __init__.py
src/py2048/interfaces/cli/: __init__.py  constants.py  display.py  game_runner.py  game_screen.py  main.py  runners.py
src/py2048/interfaces/gui/: __init__.py  main.py
src/py2048/interfaces/tui/: app.py  widgets.py
src/py2048/interfaces/tui/screens/: __init__.py  game_over_screen.py  game_screen.py  main_menu.py
src/py2048/interfaces/tui/styles/: game_over_screen.tcss  game_screen.tcss  main_menu.tcss
src/py2048/interfaces/web/: __init__.py  main.py
src/py2048/service_layer/: handlers.py  messagebus.py  unit_of_work.py
tests/: __init__.py  conftest.py  test_sanity.py
tests/core/: __init__.py  test_board_init.py  test_game_board.py  test_game_state.py  test_moves.py
tests/data/: test_game_1.json  test_game_2.json  test_records_file.json
tests/functional/: console_parser.py  test_cli.py  test_cli_client.py  test_tui.py  test_unified_entry_point.py
tests/funtional/: test_cli_client.py
tests/integration/: test_repositories.py  test_views.py
tests/unit/: test_game.py  test_game_board.py  test_game_state.py  test_handlers.py  test_menu.py  test_message_bus.py
