[project]
name = "py2048"
version = "0.1.0"
description = "Play 2048 in your terminal or in a sleek Python GUI — built with clean code and open-source principles."
authors = [
    {name = "mhallum"}
]
license = {text = "MIT"}
readme = "README.md"
packages = [{ include = "py2048", from = "src" }]
requires-python = ">=3.13, <3.14"
dependencies = [
    "click (>=8.2.1,<9.0.0)"
]

[project.scripts]
py2048 = "py2048.front_end.cli:py2048"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pylint = "^3.3.7"
ruff = "^0.12.4"
mypy = "^1.17.0"
pre-commit = "^4.2.0"
pytest-cov = "^6.2.1"
