[project]
name = "py2048"
version = "0.1.0"
description = "Play 2048 in your terminal or in a sleek Python GUI — built with clean code and open-source principles."
authors = [
    {name = "mhallum"}
]
license = {text = "MIT"}
readme = "README.md"
packages = [{ include = "py2048", from = "src" }]
requires-python = ">=3.13, <3.14"
dependencies = [
    "click (>=8.2.1,<9.0.0)",
    "flask (>=3.1.1,<4.0.0)",
    "blessed (>=1.21.0,<2.0.0)",
    "rich (>=14.1.0,<15.0.0)",
    "marshmallow (>=4.0.0,<5.0.0)",
    "appdirs (>=1.4.4,<2.0.0)"
]

[project.scripts]
py2048 = "py2048.run:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pylint = "^3.3.7"
ruff = "^0.12.7"
mypy = "^1.17.0"
pre-commit = "^4.2.0"
pytest-cov = "^6.2.1"
hypothesis = "^6.136.7"
pyfakefs = "^5.9.2"


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
